[package]
name = "acfutils"
version = "0.1.0"
edition = "2021"
authors = ["David Dunwoody <david.dunwoody@gmail.com>"]

[features]
generate-bindings = ["dep:bindgen"]

[dependencies]
acfutils-sys = { git = "https://github.com/ddunwoody/acfutils-sys.git" }
nanorand = { version = "0.7.0", default-features = false, features = ["wyrand"] }
tracing = "0.1.37"

[build-dependencies]
bindgen = { version = "0.68.1", optional = true }
build-support = { git = "https://github.com/ddunwoody/build-support.git" }
cc = "1.0.83"
